# mantle-duel

./: .gitignore  README.md  SUBMISSION.md  VIDEO_NARRATION.md  X_POST.md  deployment.json  main.py  pyproject.toml  todo.md  wallets.example.json
contracts/: MantleDuel.sol
frontend/: index.html  viktor.space.json
frontend/convex/: seedTestUser.ts
frontend/scripts/: testUser.ts
frontend/src/auth/public/: PublicAppRoutes.tsx
frontend/src/components/: TestUserLoginSection.tsx
frontend/src/lib/: duel.ts
frontend/src/pages/: PublicLandingPage.tsx
scripts/: claim_faucet.py  compile.py  debug_console.py  deploy.py  faucet_handoff.py  genwallet.py  injected_wallet.py  keeper.py  seed.py  shots.py  verify.py
