[project]
name = "mantle-duel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eth-account>=0.13.7",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "py-solc-x>=2.0.5",
    "requests>=2.34.2",
    "web3>=7.16.0",
]
